# ml-demo

./: demo1.py  demo2.py  pyproject.toml
