[tool.poetry]
name = "ml-demo"
version = "0.1.0"
description = ""
authors = ["nurliman <nurlimandiara@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.17"
torch = "2.0.0"
torchrec = "^0.4.0"
tensorflow = "^2.13.0"
tensorflow-datasets = "^4.9.2"
tensorflow-recommenders = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
